# cuda_agent

./: .env.example  .gitignore  README.md  SERVER_SUBMIT.md  project_description.md  pyproject.toml  report.md  run.sh  target_spec_sample.json
src/hw_probe/: __init__.py  main.py
src/hw_probe/agents/: __init__.py  graph.py  llm_util.py  nodes.py  prompts.py  state.py
src/hw_probe/config/: __init__.py  settings.py
src/hw_probe/observability/: __init__.py  llm_session_markdown.py  llm_trace.py  logging_setup.py  status_report.py
src/hw_probe/runtime/: __init__.py  shutdown.py
src/hw_probe/services/: __init__.py  output_writer.py  target_spec.py
src/hw_probe/templates/: gemm_stub.cu
src/hw_probe/tools/: __init__.py  cuda.py  filesystem.py  pathutil.py  shell.py
