[project]
name = "hw-probe"
version = "0.3.0"
description = "GPU hardware probe agent: LangGraph multi-agent + ReAct, uv-managed"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
hw-probe = "hw_probe.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hw_probe"]

[dependency-groups]
dev = ["ruff>=0.8.0"]
